--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
     "@gsap/react": "^2.1.2",
+    "@vercel/analytics": "^1.5.0",
     "gsap": "^3.12.7",
     "next": "15.1.6",
     "react": "^19.0.0",
